--- a/Website/html/web.html
+++ b/Website/html/web.html
@@ -5,98 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Electrik</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #fff;
-            color: #111;
-        }
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 40px;
-            border-bottom: 1px solid #ddd;
-        }
-        nav a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #000;
-            font-weight: 500;
-        }
-        nav .btn {
-            padding: 8px 16px;
-            background: #000;
-            color: #fff;
-            border-radius: 4px;
-        }
-        section {
-            display: flex;
-            flex-wrap: wrap;
-            padding: 60px 40px;
-            gap: 40px;
-        }
-        .text-block, .image-block {
-            flex: 1 1 400px;
-        }
-        .text-block h1, .text-block h2 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-        }
-        .text-block p {
-            font-size: 1rem;
-            margin-bottom: 20px;
-            max-width: 600px;
-        }
-        .text-block button {
-            padding: 10px 20px;
-            background: #000;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-        }
-        .image-block img {
-            max-width: 100%;
-            border-radius: 10px;
-        }
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            padding: 0 40px 60px;
-        }
-        .product {
-            background: #f9f9f9;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-        .product img {
-            max-width: 100%;
-            border-radius: 8px;
-        }
-        .footer {
-            background: #f1f1f1;
-            padding: 40px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .footer div {
-            margin: 10px 0;
-        }
-        .footer a {
-            display: block;
-            text-decoration: none;
-            color: #333;
-            margin-bottom: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/user.css">
 </head>
 <body>
     <header>
@@ -123,13 +32,13 @@
             <button>Explore Products</button></a>
         </div>
         <div class="image-block">
-            <img src="smart device.jpg" alt="Smart Device" />
+            <img src="../images/smart device.jpg" alt="Smart Device" />
         </div>
     </section>
 
     <section>
         <div class="image-block">
-            <img src="apple watch ultra.jpg" alt="Tablet" />
+            <img src="../images/apple watch ultra.jpg" alt="Tablet" />
         </div>
         <div class="text-block">
             <h2>Enhance Your Digital Experience</h2>
@@ -149,7 +58,7 @@
             </a>
         </div>
         <div class="image-block">
-            <img src="airpods.jfif" alt="Smart Devices" />
+            <img src="../images/airpods.jfif" alt="Smart Devices" />
         </div>
     </section>
 
