scenario 4 (tracking order)

--- a/Website/html/checkout.html
+++ b/Website/html/checkout.html
@@ -16,7 +16,9 @@
             <a href="product.html">Products</a>
             <a href="#">Contact</a>
             <a href="checkout.html">Checkout</a>
-            <a href="login_signup.html" class="btn">Login</a>
+            <a href="track_order.html">Track Order</a>
+			<a href="login_signup.html" class="btn">Login</a>
+			
         </nav>
   </header>
 
