--- a/Website/html/web.html
+++ b/Website/html/web.html
@@ -19,6 +19,7 @@
             <a href="product.html">Products</a>
             <a href="#">Contact</a>
             <a href="checkout.html">Checkout</a>
+			<a href="track_order.html">Track Order</a>
             <a href="login_signup.html" class="btn">Login</a>
         </nav>
     </header>
