--- a/Website/html/admin_analytics.html
+++ b/Website/html/admin_analytics.html
@@ -20,7 +20,7 @@
       <a href="web.html">Home</a>
       <a href="admin_products.html">Products</a>
       <a href="admin_analytics.html" class="btn">Analytics</a>
-      <a href="login_signup.html">Logout</a>
+      <a id="login-logout-btn" class="btn" href="login_signup.html">Login</a>
     </nav>
   </header>
 
@@ -120,5 +120,6 @@
   </div>
 
   <script src="../js/admin_analytics.js"></script>
+  <script src="../js/session.js"></script>
 </body>
 </html> 
