--- a/Website/html/admin_products.html
+++ b/Website/html/admin_products.html
@@ -17,7 +17,7 @@
       <a href="web.html">Home</a>
       <a href="admin_products.html" class="btn">Products</a>
       <a href="admin_analytics.html">Analytics</a>
-      <a href="login_signup.html">Logout</a>
+      <a id="login-logout-btn" class="btn" href="login_signup.html">Login</a>
     </nav>
   </header>
 
@@ -109,5 +109,6 @@
   </div>
 
   <script src="../js/admin_products.js"></script>
+  <script src="../js/session.js"></script>
 </body>
 </html> 
