--- a/Website/html/checkout.html
+++ b/Website/html/checkout.html
@@ -49,6 +49,44 @@
       <p>Shipping Fee: $10</p>
       <p><strong>Total: $4905</strong></p>
     </div>
+    <!-- Customer Information Form -->
+    <form class="customer-info">
+      <h3>Customer Information</h3>
+      <div class="form-group"><label for="customer-name">Name:</label>
+      <input type="text" id="customer-name" name="customer-name" required></div>
+      <div class="form-group"><label for="customer-address">Address:</label>
+      <input type="text" id="customer-address" name="customer-address" required></div>
+      <div class="form-group"><label for="customer-phone">Phone:</label>
+      <input type="tel" id="customer-phone" name="customer-phone" required></div>
+      <div class="form-group"><label for="customer-email">Email:</label>
+      <input type="email" id="customer-email" name="customer-email" required></div>
+    </form>
+    <!-- Payment Method Section -->
+    <form class="payment-method">
+      <h3>Payment Method</h3>
+      <div class="form-group"><label for="card-number">Card Number:</label>
+      <input type="text" id="card-number" name="card-number" maxlength="19" placeholder="1234 5678 9012 3456" required></div>
+      <div class="form-group"><label for="card-cvc">CVC:</label>
+      <input type="text" id="card-cvc" name="card-cvc" maxlength="4" placeholder="123" required></div>
+      <div class="form-group"><label for="card-expiry">Expiry Date:</label>
+      <input type="text" id="card-expiry" name="card-expiry" maxlength="7" placeholder="MM/YY" required></div>
+      <div class="form-group"><label for="card-name">Name on Card:</label>
+      <input type="text" id="card-name" name="card-name" required></div>
+      <button type="submit">Proceed to Payment</button>
+    </form>
   </div>
+  <script src="../js/session.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const paymentForm = document.querySelector('.payment-method');
+      if (paymentForm) {
+        paymentForm.addEventListener('submit', function(e) {
+          e.preventDefault();
+          alert('Payment successful');
+          window.location.href = 'web.html';
+        });
+      }
+    });
+  </script>
 </body>
 </html>
