--- a/Website/html/checkout.html
+++ b/Website/html/checkout.html
@@ -24,30 +24,15 @@
 
   <div class="container">
     <h2>Checkout</h2>
-    <div class="product">
-      <span>Iphone 16</span>
-      <span>$999</span>
+    <!-- This div will be populated with cart items by JavaScript -->
+    <div id="cart-items-list">
+        <p>Loading cart...</p> 
     </div>
-    <div class="product">
-      <span>Ipad Pro</span>
-      <span>$799</span>
-    </div>
-    <div class="product">
-      <span>WorkPro Laptop</span>
-      <span>$1299</span>
-    </div>
-    <div class="product">
-      <span>Apple Watch</span>
-      <span>$399</span>
-    </div>
-    <div class="product">
-      <span>Apple Watch Ultra</span>
-      <span>$1399</span>
-    </div>
+    
     <div class="summary">
-      <p>Subtotal: $4895</p>
-      <p>Shipping Fee: $10</p>
-      <p><strong>Total: $4905</strong></p>
+      <p>Subtotal: <span id="subtotal-amount">$0.00</span></p>
+      <p>Shipping Fee: <span id="shipping-fee-amount">$0.00</span></p>
+      <p><strong>Total: <span id="total-amount">$0.00</span></strong></p>
     </div>
     <!-- Customer Information Form -->
     <form class="customer-info">
@@ -78,11 +63,87 @@
   <script src="../js/session.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
+      const cartItemsList = document.getElementById('cart-items-list');
+      const subtotalAmountEl = document.getElementById('subtotal-amount');
+      const shippingFeeAmountEl = document.getElementById('shipping-fee-amount');
+      const totalAmountEl = document.getElementById('total-amount');
+      
+      const customerId = localStorage.getItem('customer_id'); // Assumes customer_id is stored after login
+
+      if (customerId) {
+        // --- Logged-in user: Fetch cart from backend ---
+        fetch(`http://localhost:5002/get_cart_details?customer_id=${customerId}`)
+          .then(response => response.json())
+          .then(data => {
+            if (data.success && data.items) {
+              cartItemsList.innerHTML = ''; // Clear loading message
+              if (data.items.length === 0) {
+                  cartItemsList.innerHTML = '<p>Your cart is empty.</p>';
+              } else {
+                  data.items.forEach(item => {
+                      const itemDiv = document.createElement('div');
+                      itemDiv.className = 'product';
+                      itemDiv.innerHTML = `
+                          <span>${item.name} (x${item.quantity})</span>
+                          <span>$${item.item_total.toFixed(2)}</span>
+                      `;
+                      cartItemsList.appendChild(itemDiv);
+                  });
+              }
+              subtotalAmountEl.textContent = `$${data.subtotal.toFixed(2)}`;
+              shippingFeeAmountEl.textContent = `$${data.shipping_fee.toFixed(2)}`;
+              totalAmountEl.textContent = `$${data.total_amount.toFixed(2)}`;
+            } else {
+              cartItemsList.innerHTML = `<p>Error loading cart: ${data.message || 'Unknown error'}</p>`;
+            }
+          })
+          .catch(error => {
+            console.error('Error fetching cart:', error);
+            cartItemsList.innerHTML = '<p>Could not load cart. Please try again later.</p>';
+          });
+      } else {
+        // --- Guest user: Load cart from localStorage ---
+        const guestCartItems = JSON.parse(localStorage.getItem('guestCartItems')) || [];
+        cartItemsList.innerHTML = ''; // Clear loading message
+
+        if (guestCartItems.length === 0) {
+            cartItemsList.innerHTML = '<p>Your cart is empty. Add items from the products page!</p>';
+            subtotalAmountEl.textContent = '$0.00';
+            shippingFeeAmountEl.textContent = '$0.00';
+            totalAmountEl.textContent = '$0.00';
+        } else {
+            let subtotal = 0;
+            guestCartItems.forEach(item => {
+                const itemDiv = document.createElement('div');
+                itemDiv.className = 'product';
+                const itemTotal = item.price * item.quantity;
+                itemDiv.innerHTML = `
+                    <span>${item.name} (x${item.quantity})</span>
+                    <span>$${itemTotal.toFixed(2)}</span>
+                `;
+                cartItemsList.appendChild(itemDiv);
+                subtotal += itemTotal;
+            });
+            const shippingFee = subtotal > 0 ? 10 : 0; // Example shipping fee
+            const totalAmount = subtotal + shippingFee;
+
+            subtotalAmountEl.textContent = `$${subtotal.toFixed(2)}`;
+            shippingFeeAmountEl.textContent = `$${shippingFee.toFixed(2)}`;
+            totalAmountEl.textContent = `$${totalAmount.toFixed(2)}`;
+        }
+      }
+
+      // --- Payment Form Submission (remains the same) ---
       const paymentForm = document.querySelector('.payment-method');
       if (paymentForm) {
         paymentForm.addEventListener('submit', function(e) {
           e.preventDefault();
           alert('Payment successful');
+          // For guest cart, you might want to clear 'guestCartItems'
+          if (!customerId) {
+            localStorage.removeItem('guestCartItems');
+          }
+          // For logged-in users, you'd typically clear the cart on the backend / create an order
           window.location.href = 'web.html';
         });
       }
