--- a/Website/html/admin_analytics.html
+++ b/Website/html/admin_analytics.html
@@ -73,8 +73,8 @@
         <div>
           <label for="year-filter">Year:</label>
           <select id="year-filter">
-            <option value="2025">2025</option>
             <option value="2024">2024</option>
+            <option value="2025">2025</option>
           </select>
         </div>
         <div>
@@ -130,7 +130,7 @@
             <th>Revenue</th>
           </tr>
         </thead>
-        <tbody id="top-products">
+        <tbody id="top-products-table">
           <!-- Will be populated by JavaScript -->
         </tbody>
       </table>
