Update name from Electrik to AWE Electronics

--- a/Website/html/admin_products.html
+++ b/Website/html/admin_products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Electrik | Admin - Product Management</title>
+  <title>AWE Electronics | Admin - Product Management</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/admin.css">
   
@@ -50,7 +50,7 @@
 <body>
   <header>
     <div>
-      <strong>Electrik</strong>
+      <strong>AWE Electronics</strong>
       <span class="admin-badge">Admin</span>
     </div>
     <nav>
