--- a/Website/html/login_signup.html
+++ b/Website/html/login_signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Electrik | Login / Sign Up</title>
+  <title>AWE Electronics | Login / Sign Up</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/user.css">
   
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header>
-    <div><strong>Electrik</strong></div>
+    <div><strong>AWE Electronics</strong></div>
     <nav>
       <a href="web.html">Home</a>
       <a href="#">About</a>
