--- a/Website/html/track_order.html
+++ b/Website/html/track_order.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <div><strong>Electrik</strong></div>
+    <div><strong>AWE Electronics</strong></div>
     <nav>
       <a href="web.html">Home</a>
       <a href="#">About</a>
