--- a/Website/html/admin_analytics.html
+++ b/Website/html/admin_analytics.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Electrik | Admin - Sales Analytics</title>
+  <title>AWE Electronics | Admin - Sales Analytics</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/admin.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -22,7 +22,7 @@
 <body>
   <header>
     <div>
-      <strong>Electrik</strong>
+      <strong>AWE Electronics</strong>
       <span class="admin-badge">Admin</span>
     </div>
     <nav>
