--- a/Website/html/checkout.html
+++ b/Website/html/checkout.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Electrik | Checkout</title>
+  <title>AWE Electronics | Checkout</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/checkout.css">
 </head>
 <body>
   <header>
-    <div><strong>Electrik</strong></div>
+    <div><strong>AWE Electronics</strong></div>
         <nav>
             <a href="web.html">Home</a>
             <a href="#">About</a>
