--- a/Website/html/web.html
+++ b/Website/html/web.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electrik</title>
+    <title>AWE Electronics</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/user.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div>
             <a href ="web.html">
-                <strong>Electrik</strong></a>
+                <strong>AWE Electronics</strong></a>
         </div>
         <nav>
             <a href="web.html">Home</a>
