update logic admin log in

--- a/Website/index.html
+++ b/Website/index.html
@@ -30,7 +30,7 @@
     <header>
         <div>
             <a href="index.html">
-                <strong>Electrik</strong>
+                <strong>AWE Electronics</strong>
             </a>
         </div>
         <nav>
@@ -46,7 +46,7 @@
     
     <section>
         <div class="text-block">
-            <p>Welcome to Electrik</p>
+            <p>Welcome to AWE Electronicsk</p>
             <h1>Your One-Stop Electronics Shop</h1>
             <p>Discover the latest in technology with our premium selection of electronics products. Quality devices at competitive prices.</p>
             <a href="html/product.html">
