--- a/Website/index.html
+++ b/Website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWE Electronics - Electronics Store</title>
+    <title>Electrik - Electronics Store</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/user.css">
     
@@ -30,7 +30,7 @@
     <header>
         <div>
             <a href="index.html">
-                <strong>AWE Electronics</strong>
+                <strong>Electrik</strong>
             </a>
         </div>
         <nav>
@@ -46,7 +46,7 @@
     
     <section>
         <div class="text-block">
-            <p>Welcome to AWE Electronicsk</p>
+            <p>Welcome to Electrik</p>
             <h1>Your One-Stop Electronics Shop</h1>
             <p>Discover the latest in technology with our premium selection of electronics products. Quality devices at competitive prices.</p>
             <a href="html/product.html">
