Add about page and update frontend

--- a/Website/html/about.html
+++ b/Website/html/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AWE Electronics</title>
+    <title>About | AWE Electronics</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/user.css">
 </head>
@@ -19,47 +19,20 @@
             <a href="product.html">Products</a>
             <a href="#">Contact</a>
             <a href="checkout.html">Checkout</a>
-			<a href="track_order.html">Track Order</a>
+            <a href="track_order.html">Track Order</a>
             <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
         </nav>
     </header>
 
     <section>
-        <div class="text-block">
-            <p>Discover the Latest Smart Home Automation</p>
-            <h1>Elevate Your Living Space</h1>
-            <p>Revolutionize your home with cutting-edge smart technology. Seamlessly integrate your devices and optimize efficiency.</p>
-            <a href = "product.html">
-            <button>Explore Products</button></a>
-        </div>
-        <div class="image-block">
-            <img src="../images/smart device.jpg" alt="Smart Device" />
-        </div>
-    </section>
-
-    <section>
-        <div class="image-block">
-            <img src="../images/apple watch ultra.jpg" alt="Tablet" />
-        </div>
-        <div class="text-block">
-            <h2>Enhance Your Digital Experience</h2>
-            <p>Seamless digital integration for smart productivity, lifestyle enhancements, and more.</p>
-            <a href="product.html" class ="btn">
-                <button>Shop Now</button>
-            </a>
-        </div>
-    </section>
-
-    <section>
-        <div class="text-block">
-            <h2>Unleash the Power of Smart Tech</h2>
-            <p>Explore the future with our connected lifestyle products and enjoy seamless smart living.</p>
-            <a href="product.html" class ="btn">
-                <button>Shop Now</button>
-            </a>
-        </div>
-        <div class="image-block">
-            <img src="../images/airpods.jfif" alt="Smart Devices" />
+        <div class="text-block" style="max-width: 700px; margin: 0 auto; text-align: center;">
+            <h1 style="font-size: 2.2em; margin-bottom: 0.5em;">Empowering Your World with Smarter Tech.</h1>
+            <p style="font-size: 1.15em; margin-bottom: 2em;">
+                At AWE Electronics, we're passionate about connecting people with the latest in consumer technology. Whether you're a tech enthusiast, a busy professional, or someone looking to upgrade your everyday devices, we offer a wide range of cutting-edge electronics to suit your lifestyle. From flagship smartphones and high-performance laptops to smart home systems, wearables, audio gear, and essential accessories — we've got it all under one roof.<br><br>
+                We partner with top global brands to bring you trusted products at competitive prices, backed by expert advice and exceptional customer service. Our mission is to make technology accessible, reliable, and exciting for everyone.<br><br>
+                Explore our collections, discover new innovations, and experience the future of electronics — only at AWE Electronics.
+            </p>
+            <a href="product.html" class="btn"><button>Learn More</button></a>
         </div>
     </section>
 
@@ -88,4 +61,4 @@
     </div>
     <script src="../js/session.js"></script>
 </body>
-</html>
+</html> 
