--- a/Website/html/admin_analytics.html
+++ b/Website/html/admin_analytics.html
@@ -29,7 +29,8 @@
       <a href="web.html">Home</a>
       <a href="admin_products.html">Products</a>
       <a href="admin_analytics.html" class="btn">Analytics</a>
-      <a id="login-logout-btn" class="btn" href="login_signup.html">Login</a>
+      <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
+      <a href="about.html">About</a>
     </nav>
   </header>
 
