--- a/Website/html/admin_products.html
+++ b/Website/html/admin_products.html
@@ -57,7 +57,7 @@
       <a href="web.html">Home</a>
       <a href="admin_products.html" class="btn">Products</a>
       <a href="admin_analytics.html">Analytics</a>
-      <a id="login-logout-btn" class="btn" href="login_signup.html">Login</a>
+      <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
     </nav>
   </header>
 
