--- a/Website/index.html
+++ b/Website/index.html
@@ -35,7 +35,7 @@
         </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">About</a>
+            <a href="html/about.html">About</a>
             <a href="html/product.html">Products</a>
             <a href="#">Contact</a>
             <a href="html/checkout.html">Checkout</a>
@@ -129,5 +129,6 @@
             }
         });
     </script>
+    <script src="js/session.js"></script>
 </body>
 </html> 
