--- a/Website/html/login_signup.html
+++ b/Website/html/login_signup.html
@@ -19,12 +19,12 @@
     <div><strong>AWE Electronics</strong></div>
     <nav>
       <a href="web.html">Home</a>
-      <a href="#">About</a>
+      <a href="about.html">About</a>
       <a href="product.html">Products</a>
       <a href="#">Contact</a>
       <a href="checkout.html">Checkout</a>
       <a href="track_order.html">Track Order</a>
-      <a href="login_signup.html" class="btn">Login</a>
+      <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
     </nav>
   </header>
 
