--- a/Website/html/product.html
+++ b/Website/html/product.html
@@ -12,12 +12,12 @@
         <div><strong>AWE Electronics</strong></div>
     <nav>
         <a href="web.html">Home</a>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
         <a href="product.html">Products</a>
         <a href="#">Contact</a>
         <a href="checkout.html">Checkout</a>
 		<a href="track_order.html">Track Order</a>
-        <a href="login_signup.html" class="btn">Login</a>
+        <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
     </nav>
     </header>
 
@@ -30,7 +30,7 @@
         productList.innerHTML = '<div style="grid-column: 1/-1; text-align:center;">Loading products...</div>';
         const formData = new FormData();
         formData.append('action', 'get_all');
-        fetch('http://localhost:5000/admin_update_product', {
+        fetch('../php/product.php', {
             method: 'POST',
             body: formData
         })
