update the edit products function and rewrite admin_product.js in OOP

--- a/Website/html/admin_products.html
+++ b/Website/html/admin_products.html
@@ -117,7 +117,7 @@
           </div>
           <div class="form-actions">
             <button type="button" class="btn-action" id="cancel-btn">Cancel</button>
-            <button type="submit" class="btn-action btn-edit" id="save-btn">Save Product</button>
+            <button type="submit" class="btn-action btn-save" id="save-btn">Save Product</button>
           </div>
         </form>
       </div>
