--- a/Website/html/login_signup.html
+++ b/Website/html/login_signup.html
@@ -57,12 +57,16 @@
       <input type="text" placeholder="Last Name" required />
       <input type="email" placeholder="Email" required />
       <input type="tel" placeholder="Phone Number" required />
+      <input type="text" placeholder="Address" required /> 
       <input type="password" placeholder="Password" required />
       <button type="submit">Sign Up</button>
     </form>
 
-    <div class="toggle-link" onclick="toggleForms()">Don't have an account? Sign Up</div>
-    
+
+    <div class="toggle-link">
+      <a href="signup.html">Don't have an account? Sign Up</a>
+    </div>
+        
     <div id="message-container"></div>
   </div>
 
