--- a/Website/html/customer_product.html
+++ b/Website/html/customer_product.html
@@ -11,9 +11,8 @@
     <div><strong>Electrik</strong></div>
     <nav>
       <a href="web.html">Home</a>
-      <a href="#">About</a>
+      <a href="about.html">About</a>
       <a href="product.html">Products</a>
-      <a href="#">Contact</a>
       <a href="checkout.html">Checkout</a>
       <a href="track_order.html">Track Order</a>
       <a href="login_signup.html" class="btn">Login</a>
