--- a/Website/html/login_signup.html
+++ b/Website/html/login_signup.html
@@ -21,7 +21,6 @@
       <a href="web.html">Home</a>
       <a href="about.html">About</a>
       <a href="product.html">Products</a>
-      <a href="#">Contact</a>
       <a href="checkout.html">Checkout</a>
       <a href="track_order.html">Track Order</a>
       <a href="login_signup.html" class="btn" id="login-logout-btn">Login</a>
@@ -38,7 +37,7 @@
 
     <!-- User Login Form -->
     <form id="login-form">
-      <input type="text" placeholder="Email or Phone Number" required />
+      <input type="text" placeholder="Email" required />
       <input type="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
