--- a/Website/html/product.html
+++ b/Website/html/product.html
@@ -14,9 +14,8 @@
     </div>
     <nav>
       <a href="web.html">Home</a>
-      <a href="#">About</a>
+      <a href="about.html">About</a>
       <a href="product.html">Products</a>
-      <a href="#">Contact</a>
       <a href="checkout.html" class="btn">Checkout (<span id="cart-count">0</span>)</a>
       <a href="track_order.html">Track Order</a>
       <a href="login_signup.html" class="btn">Login</a>
