delete footer and change button css

--- a/Website/html/about.html
+++ b/Website/html/about.html
@@ -25,9 +25,9 @@
     </header>
 
     <section>
-        <div class="text-block" style="max-width: 700px; margin: 0 auto; text-align: center;">
-            <h1 style="font-size: 2.2em; margin-bottom: 0.5em;">Empowering Your World with Smarter Tech.</h1>
-            <p style="font-size: 1.15em; margin-bottom: 2em;">
+        <div class="about-section">
+            <h1 class="about-slogan">Empowering Your World with Smarter Tech.</h1>
+            <p class="about-description">
                 At AWE Electronics, we're passionate about connecting people with the latest in consumer technology. Whether you're a tech enthusiast, a busy professional, or someone looking to upgrade your everyday devices, we offer a wide range of cutting-edge electronics to suit your lifestyle. From flagship smartphones and high-performance laptops to smart home systems, wearables, audio gear, and essential accessories — we've got it all under one roof.<br><br>
                 We partner with top global brands to bring you trusted products at competitive prices, backed by expert advice and exceptional customer service. Our mission is to make technology accessible, reliable, and exciting for everyone.<br><br>
                 Explore our collections, discover new innovations, and experience the future of electronics — only at AWE Electronics.
@@ -46,17 +46,10 @@
         </div>
         <div>
             <p><strong>Company</strong></p>
-            <a href="#">About Us</a>
+            <a href="about.html">About Us</a>
             <a href="#">Careers</a>
             <a href="#">Press</a>
             <a href="#">Partnerships</a>
-        </div>
-        <div>
-            <p><strong>Connect</strong></p>
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a>
-            <a href="#">LinkedIn</a>
         </div>
     </div>
     <script src="../js/session.js"></script>
