--- a/Website/html/customer_product.html
+++ b/Website/html/customer_product.html
@@ -23,6 +23,23 @@
     <div id="product-list" class="product-grid"></div>
   </section>
 
+  <div class="footer">
+    <div>
+        <p><strong>Resources</strong></p>
+        <a href="#">FAQs</a>
+        <a href="#">Support</a>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+    </div>
+    <div>
+        <p><strong>Company</strong></p>
+        <a href="about.html">About Us</a>
+        <a href="#">Careers</a>
+        <a href="#">Press</a>
+        <a href="#">Partnerships</a>
+    </div>
+  </div>
+
   <script src="../js/customer_products.js"></script>
 </body>
 </html>
