--- a/Website/html/checkout.html
+++ b/Website/html/checkout.html
@@ -55,9 +55,26 @@
       <input type="text" id="card-name" name="card-name" required>
     </div>
 
-    <button type="submit">Proceed to Payment</button>
+    <button type="submit" class="btn">Proceed to Payment</button>
   </form> 
 
+  </div>
+
+  <div class="footer">
+    <div>
+        <p><strong>Resources</strong></p>
+        <a href="#">FAQs</a>
+        <a href="#">Support</a>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+    </div>
+    <div>
+        <p><strong>Company</strong></p>
+        <a href="about.html">About Us</a>
+        <a href="#">Careers</a>
+        <a href="#">Press</a>
+        <a href="#">Partnerships</a>
+    </div>
   </div>
 
   <script src="../js/session.js"></script>
