--- a/Website/html/login_signup.html
+++ b/Website/html/login_signup.html
@@ -77,6 +77,23 @@
     <div id="message-container"></div>
   </div>
 
+  <div class="footer">
+    <div>
+        <p><strong>Resources</strong></p>
+        <a href="#">FAQs</a>
+        <a href="#">Support</a>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+    </div>
+    <div>
+        <p><strong>Company</strong></p>
+        <a href="about.html">About Us</a>
+        <a href="#">Careers</a>
+        <a href="#">Press</a>
+        <a href="#">Partnerships</a>
+    </div>
+  </div>
+
   <!-- Include page-specific scripts -->
   <script src="../js/auth.js"></script>
   <script src="../js/session.js"></script>
