--- a/Website/html/signup.html
+++ b/Website/html/signup.html
@@ -48,6 +48,23 @@
     </p>
   </div>
 
+  <div class="footer">
+    <div>
+        <p><strong>Resources</strong></p>
+        <a href="#">FAQs</a>
+        <a href="#">Support</a>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+    </div>
+    <div>
+        <p><strong>Company</strong></p>
+        <a href="about.html">About Us</a>
+        <a href="#">Careers</a>
+        <a href="#">Press</a>
+        <a href="#">Partnerships</a>
+    </div>
+  </div>
+
   <script src="../js/signup.js"></script>
   <script src="../js/session.js"></script>
 </body>
