--- a/Website/html/track_order.html
+++ b/Website/html/track_order.html
@@ -34,6 +34,23 @@
     </div>
   </section>
 
+  <div class="footer">
+    <div>
+        <p><strong>Resources</strong></p>
+        <a href="#">FAQs</a>
+        <a href="#">Support</a>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+    </div>
+    <div>
+        <p><strong>Company</strong></p>
+        <a href="about.html">About Us</a>
+        <a href="#">Careers</a>
+        <a href="#">Press</a>
+        <a href="#">Partnerships</a>
+    </div>
+  </div>
+
   <script src="../js/session.js"></script>
 </body>
 </html>
