--- a/Website/html/web.html
+++ b/Website/html/web.html
@@ -72,17 +72,10 @@
         </div>
         <div>
             <p><strong>Company</strong></p>
-            <a href="#">About Us</a>
+            <a href="about.html">About Us</a>
             <a href="#">Careers</a>
             <a href="#">Press</a>
             <a href="#">Partnerships</a>
-        </div>
-        <div>
-            <p><strong>Connect</strong></p>
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a>
-            <a href="#">LinkedIn</a>
         </div>
     </div>
     <script src="../js/session.js"></script>
