--- a/Website/html/customer_product.html
+++ b/Website/html/customer_product.html
@@ -15,8 +15,9 @@
       <a href="product.html">Products</a>
       <a href="#">Contact</a>
       <a href="checkout.html">Checkout</a>
-      <a href="track_order.html">Track Order</a>
-      <a href="login_signup.html" class="btn">Login</a>
+      <a href="track_order.html" id="track-link" style="display: none;">Track Order</a>
+      <a href="#" id="logoutBtn" class="btn" style="display: none;">Logout</a>
+      <a href="login_signup.html" class="btn" id="loginBtn">Login</a>
     </nav>
   </header>
 
@@ -25,5 +26,29 @@
   </section>
 
   <script src="../js/customer_products.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const customerId = localStorage.getItem('customer_id');
+      const trackLink = document.getElementById('track-link');
+      const logoutBtn = document.getElementById('logoutBtn');
+      const loginBtn = document.getElementById('loginBtn');
+
+      if (customerId) {
+        if (trackLink) trackLink.style.display = 'inline-block';
+        if (logoutBtn) logoutBtn.style.display = 'inline-block';
+        if (loginBtn) loginBtn.style.display = 'none';
+
+        logoutBtn?.addEventListener('click', function(e) {
+          e.preventDefault();
+          localStorage.removeItem('customer_id');
+          window.location.href = 'login_signup.html';
+        });
+      } else {
+        if (trackLink) trackLink.style.display = 'none';
+        if (logoutBtn) logoutBtn.style.display = 'none';
+        if (loginBtn) loginBtn.style.display = 'inline-block';
+      }
+    });
+  </script>
 </body>
 </html>
