--- a/Website/html/track_order.html
+++ b/Website/html/track_order.html
@@ -3,37 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Track Your Order</title>
-   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <title>Electrik | Track Your Order</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/track_order.css" />
-  <script src="../js/track_order.js" defer></script>
+  <script src="../js/track_order.js" type="module" defer></script>
 </head>
 <body>
 
   <header>
-    <div><strong>AWE Electronics</strong></div>
+    <div><strong>Electrik</strong></div>
     <nav>
       <a href="web.html">Home</a>
       <a href="#">About</a>
       <a href="product.html">Products</a>
       <a href="#">Contact</a>
       <a href="checkout.html">Checkout</a>
-      <a href="track_order.html">Track Order</a>
-      <a href="login_signup.html" class="btn">Login</a>
+      <a href="track_order.html" id="track-link" style="display: none;">Track Order</a>
+      <a href="#" id="logoutBtn" class="btn" style="display: none;">Logout</a>
+      <a href="login_signup.html" class="btn" id="loginBtn">Login</a>
     </nav>
   </header>
 
   <section class="track-section">
     <div class="track-container">
       <h1>Track Your Order</h1>
-      <p class="track-subtext">Enter your Order ID below to check the latest status.</p>
+      <p class="track-subtext">Enter your Order ID <strong>OR</strong> your Name with Email or Phone.</p>
 
-      <input type="text" id="orderId" placeholder="e.g. ORD101" />
-      <button onclick="trackOrder()">Track</button>
+      <form id="track-order-form">
+        <input type="text" name="order_id" placeholder="Order ID" />
+        <div class="divider">OR</div>
+        <input type="text" name="name" placeholder="Full Name" />
+        <div class="divider small">Email <strong>OR</strong> Phone</div>
+        <input type="text" name="email" placeholder="Email" />
+        <input type="text" name="phone" placeholder="Phone Number" />
+        <button type="submit">Track</button>
+      </form>
 
-      <div id="result" class="result-box"></div>
+      <div id="result-container" class="result-box"></div>
     </div>
   </section>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const customerId = localStorage.getItem("customer_id");
+      const trackLink = document.getElementById("track-link");
+      const logoutBtn = document.getElementById("logoutBtn");
+      const loginBtn = document.getElementById("loginBtn");
+
+  
+
+      // Show/hide navbar elements based on login status
+      if (customerId) {
+        if (trackLink) trackLink.style.display = "inline-block";
+        if (logoutBtn) logoutBtn.style.display = "inline-block";
+        if (loginBtn) loginBtn.style.display = "none";
+      } else {
+        if (trackLink) trackLink.style.display = "none";
+        if (logoutBtn) logoutBtn.style.display = "none";
+        if (loginBtn) loginBtn.style.display = "inline-block";
+      }
+
+      logoutBtn?.addEventListener("click", function (e) {
+        e.preventDefault();
+        localStorage.removeItem("customer_id");
+        window.location.href = "login_signup.html";
+      });
+    });
+  </script>
 
 </body>
 </html>
